[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-cache"
version = "3.0.0"
description = "AWS System Manager Parameter Store caching client for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Casalboni", email = "alex@alexcasalboni.com" }]
keywords = ["aws", "amazon-web-services", "aws-lambda", "aws-ssm", "parameter-store"]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.5.0",
    "botocore>=1.7.12",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/alexcasalboni/ssm-cache-python"
Repository = "https://github.com/alexcasalboni/ssm-cache-python"
"Bug Tracker" = "https://github.com/alexcasalboni/ssm-cache-python/issues"

[project.optional-dependencies]
dev = [
    # testing
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
    "moto>=5.2.1",
    "freezegun>=1.5.5",
    "placebo>=0.10.0",
    # code quality
    "ruff>=0.15",
    "coveralls>=4.1.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]          # only discover test_*.py — not legacy *_test.py

[tool.coverage.run]
source = ["ssm_cache"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bugs and design issues)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",  # assert False in tests is intentional
    "B017",  # assertRaises(Exception) is intentional when testing propagation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
